# ParkerSolarWind

./: .gitignore  ExampleNotebook.ipynb  LICENSE  README.md  parkersolarwind.py  plot_parkersolarwind.py  pyproject.toml
.github/workflows/: mint-release.yml
parkersolarwind/: __init__.py  parkersolarwind.py  parkersolarwind_2fluid.py  plot_parkersolarwind.py
parkersolarwind/tests/: test_plot_psw.py  test_psw.py
