[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parkersolarwind"
version = "0.1.0"
authors = [
  {name = "Sam Badman", email = "me@example.com"}
]
dependencies = [
	"astropy >= 5.0",
	"matplotlib >= 3.6",
	"numpy >= 1.21",
	"scipy >= 1.8",
]
requires-python = " >= 3.8"
description ="Python code to produce Parker solar wind solutions (isothermal, polytropic and isotherm-polytrope 2-layer)"
readme = "README.md"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
docs = [
  "sphinx",
  "pydata_sphinx_theme"
]
lint = [
  "black",
  "flake8"
]

